--- a/TODO.txt
+++ b/TODO.txt
@@ -3,13 +3,14 @@ TODO:
 x^{3xy}+e^{i\pi }+\frac{3}{\left(\frac{5}{3}\right)}+x^{z^3-2w}+\frac{2}{3}
 x^2ye^{\frac{y}{z}}
 -x-e^{2-3x}+e^{-2x}
+\sqrt{x^3+y^3}
 
-Fix partial power in icon, fold multiple partials in row by power
 Implement generic cancellation in fractions (e.g. (a1 * a2 * ... * an) / (b1 * b2 * ... * bn))
 Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test case: x^{3xy}
 
+Add debug display textareas at bottom of page for LaTeX --> ASCII --> Scheme --> Parsed --> Derivative --> Infix --> ASCIIMath
 Find gradient with respect to detected variables
-Find all mixed partial derivatives to arbitrary order (fxx, fxy, fyy, fyx)
+Find all mixed partial derivatives to arbitrary order (fxx, fxy, fyy, fyx for n = 2, for example)
 Solve implicitly defined relations efficiently using the Implicit Function Theorem (no need for wonky chain rule stuff that way)
 	-> Implement in Scheme, move everything to one side, use make-div, optimize
 
