--- a/TODO.txt
+++ b/TODO.txt
@@ -4,20 +4,17 @@ x^{3xy}+e^{i\pi }+\frac{3}{\left(\frac{5}{3}\right)}+x^{z^3-2w}+\frac{2}{3}
 x^2ye^{\frac{y}{z}}
 -x-e^{2-3x}+e^{-2x}
 \sqrt{x^3+y^3}
-
-3 Bugs: \sin \left(x\right)^{x^{\frac{2}{-x}}}
- - simplify -1 times variable
- - simplify variable multiplication (e.g x^2 instead of xx)
- - simplify constants (-2 instead of -2/1)
+\frac{\left(x^2+y^2\right)}{2xye^{xy}}
+\sin \left(x\right)^{x^{\frac{2}{-x}}}
 
 Implement generic cancellation in fractions (e.g. (a1 * a2 * ... * an) / (b1 * b2 * ... * bn))
 Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test case: x^{3xy}
 
+Solve implicitly defined relations efficiently using the Implicit Function Theorem (no need for wonky chain rule stuff that way)
+	-> Implement in Scheme, move everything to one side, use make-div, optimize
 Add debug display textareas at bottom of page for LaTeX --> ASCII --> Scheme --> Parsed --> Derivative --> Infix --> ASCIIMath
 Find gradient with respect to detected variables
 Find all mixed partial derivatives to arbitrary order (fxx, fxy, fyy, fyx for n = 2, for example)
-Solve implicitly defined relations efficiently using the Implicit Function Theorem (no need for wonky chain rule stuff that way)
-	-> Implement in Scheme, move everything to one side, use make-div, optimize
 
 Improve web interface
 Add sidebar with sample derivatives (make them super ugly seeming / hard and ensure they all work)
