--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,7 @@ Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test
 Solve implicitly defined relations efficiently using the Implicit Function Theorem (no need for wonky chain rule stuff that way)
 	-> Implement in Scheme, move everything to one side, use make-div, optimize
 Add debug display textareas at bottom of page for LaTeX --> ASCII --> Scheme --> Parsed --> Derivative --> Infix --> ASCIIMath
+	-> Implement highlight.js to highlight expressions
 Find gradient with respect to detected variables
 Find all mixed partial derivatives to arbitrary order (fxx, fxy, fyy, fyx for n = 2, for example)
 
