--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,11 @@ x^2ye^{\frac{y}{z}}
 \sqrt{x^3+y^3}
 \frac{\left(x^2+y^2\right)}{2xye^{xy}}
 \sin \left(x\right)^{x^{\frac{2}{-x}}}
+\sinh \left(x^2+y^2+z^2\right)e^{xyz}
+xyxyyzyxyyzyxyzyxyzxyyzxy
+e^{\sin \left(\pi xyz\right)}\cdot \pi xyz\cdot \left(\pi +x+y\pi xy\pi z\right)
 
+Implement inverse trig functions
 Implement generic cancellation in fractions (e.g. (a1 * a2 * ... * an) / (b1 * b2 * ... * bn))
 Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test case: x^{3xy}
 
