--- a/TODO.txt
+++ b/TODO.txt
@@ -10,7 +10,6 @@ x^2ye^{\frac{y}{z}}
 xyxyyzyxyyzyxyzyxyzxyyzxy
 e^{\sin \left(\pi xyz\right)}\cdot \pi xyz\cdot \left(\pi +x+y\pi xy\pi z\right)
 
-Fix web interface f(x, y, z) display for implicitly defined relations
 Implement sidebar to switch between expression, relation and show gradient, mixed partial, etc. as well as samples
 Implement support for \sin ^2\left(x\right) notation
 	-> sin^2(x) notation needed
@@ -18,8 +17,8 @@ Implement inverse trig functions
 	-> Allow both sin^-1 (x) and arcsin(x) notation
 Support |x| notation
 	-> Handle in LaTeX to ASCII; simply wrap in abs(x) recursively, handle nesting
-Implement generic cancellation in fractions (e.g. (a1 * a2 * ... * an) / (b1 * b2 * ... * bn))
-Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test case: x^{3xy}
+Implement generic cancellation in fractions (e.g. (a1 * a2 * ... * an) / (b1 * b2 * ... * bn)) --> test case: xe^{x\ln \left(xyz\right)}
+Implement cancellation in conjunction with multiplication (a * 1/a = 1) --> test case: x^{3xy} OR xe^{x\ln \left(xyz\right)}
 
 Solve implicitly defined relations efficiently using the Implicit Function Theorem (no need for wonky chain rule stuff that way)
 	-> Implement in Scheme, move everything to one side, use make-div, optimize
