--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,9 @@ e^{\sin \left(\pi xyz\right)}\cdot \pi xyz\cdot \left(\pi +x+y\pi xy\pi z\right)
 \sqrt{\sqrt{x^{\frac{x}{y}}}+\ x^{\frac{xy}{z^x}}}
 -> cancellation test case (see implement generic cancellation...)
 
+-x\cos \left(x\right) ; x\cos \left(x\right) ; 	-x\cos \left(x\right)+\sin \left(x\right) ; x\cos \left(x\right)-\sin \left(x\right)
+	-> CRITICAL SIGN ERROR!
+
 Obfuscate, minify JS + Scheme; consider grunt, webpack, or some build process task manager
 Publish to GitHub Pages; add gh-pages branch
 Implement highlight.js definition for Scheme operators
